--- a/clientes.html
+++ b/clientes.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Listo, entonces tendria que guardar este repositorio dentro de laragon</h1>
+    <p>Apenas vi esto jaja pero no, solamente los proyectos que hagamos en php lo demas en cualquie ruta</p>
 </body>
 
 </html>
